--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,7 +2,7 @@
     <div class="columns">
         <div class="column is-2">
             <figure class="image is-48x48 is-pulled-right">
-                <%= image_tag avatar_select(current_user, [48,48]), alt: 'Placeholder Image', class: 'is-rounded' %>
+                <%= image_tag avatar_select(post.user, [48,48]), alt: 'Placeholder Image', class: 'is-rounded' %>
             </figure>
         </div>
         <div class="column is-9">
