--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,13 @@
 <div class="comment columns">
     <div class="column is-2 is-align-self-center">
         <figure class="image is-24x24 is-pulled-right">
-            <%= image_tag avatar_select(comment.user, [50,50]), alt: 'Placeholder Image', class: 'is-rounded' %>
+            <%= link_to comment.user do %>
+                <%= image_tag avatar_select(comment.user, [50,50]), alt: 'Placeholder Image', class: 'is-rounded' %>
+            <% end %>
         </figure>
     </div>
     <div class="column is-10">
-        <p><%=  comment.user.name %></p>
+        <p><%=  link_to comment.user.name, comment.user %></p>
         <%= comment.body %>
     </div>
 </div>
