--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -2,7 +2,9 @@
     <div class="comment_form columns">
         <div class="column is-2 is-flex is-justify-content-right">
             <figure class="image is-24x24">
-                <%= image_tag avatar_select(current_user, [50,50]), alt: 'Placeholder Image', class: 'is-rounded' %>
+                <%= link_to current_user do %>
+                    <%= image_tag avatar_select(current_user, [50,50]), alt: 'Placeholder Image', class: 'is-rounded' %>
+                <% end %>
             </figure>
         </div>
         <div class="column is-10">
