--- a/app/views/friend_requests/_requests.html.erb
+++ b/app/views/friend_requests/_requests.html.erb
@@ -4,12 +4,14 @@
         <div class="column is-4">
             <div class="media columns">
                 <div class="column is-8">
-                    <div class="is-flex is-justify-content-center">
-                        <figure class="image is-48x48">
-                            <%= image_tag avatar_select(requestor, [75,75]), alt: 'Placeholder Image', class: 'is-rounded' %>
-                        </figure>
-                    </div>
-                    <h6 class="is-size-6"><%= requestor.name %>
+                    <%= link_to requestor do %>
+                        <div class="is-flex is-justify-content-center">
+                            <figure class="image is-48x48">
+                                <%= image_tag avatar_select(requestor, [75,75]), alt: 'Placeholder Image', class: 'is-rounded' %>
+                            </figure>
+                        </div>
+                        <h6 class="is-size-6"><%= requestor.name %>
+                    <% end %>
                 </div>
                 <div class="column is-2">
                     <div class="buttons has-text-centered">
