--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -3,17 +3,19 @@
         <% friendship = Friendship.locate_friendship(current_user.id, friend.id) %>
         <div class="card column is-5 is-offset-1 block friend-card">
             <div class="card-content">
-                <div class="media  is-align-items-center">
-                    <div class="media-left">
-                        <figure class="image is-96x96">
-                            <%= image_tag avatar_select(friend, [150,150]), alt: 'Placeholder Image', class: 'is-rounded' %>
-                        </figure>
+                <%= link_to friend do %>
+                    <div class="media  is-align-items-center">
+                        <div class="media-left">
+                            <figure class="image is-96x96">
+                                <%= image_tag avatar_select(friend, [150,150]), alt: 'Placeholder Image', class: 'is-rounded' %>
+                            </figure>
+                        </div>
+                        <div class="media-content">
+                            <p class="title is-size-5 is-4"><%= friend.name %></p>
+                        </div>
                     </div>
-                    <div class="media-content">
-                        <p class="title is-size-5 is-4"><%= friend.name %></p>
-                    </div>
-                </div>
-                <div class="content">
+                <% end %>
+                <div class="content mt-4">
                     <%= link_to 'Unfriend', friendship_path(friendship[0]), method: :delete, data: { confirm:"Are you sure you want to unfriend #{friend.name}"}, class: 'button is-warning is-outlined' %>
                 </div>
             </div>
