--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,11 +2,13 @@
     <div class="columns">
         <div class="column is-2">
             <figure class="image is-48x48 is-pulled-right">
-                <%= image_tag avatar_select(post.user, [48,48]), alt: 'Placeholder Image', class: 'is-rounded' %>
+                <%= link_to post.user do %>
+                    <%= image_tag avatar_select(post.user, [48,48]), alt: 'Placeholder Image', class: 'is-rounded' %>
+                <% end %>
             </figure>
         </div>
         <div class="column is-9">
-            <p class="is-text-weight-semibold is-size-6"><%= post.user.name %></p>
+            <p class="is-text-weight-semibold is-size-6"><%= link_to post.user.name, post.user %></p>
             <p class="is-size-6"><%= post.body %></p>
             <div class="likes">
                 <% like = Like.locate_like(current_user.id, post.id) %>
