--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,14 +2,17 @@
     <% @users.each do |user| %>
         <% unless current_user.friends.exists?(user.id) %>
             <div class="column is-4 block has-text-centered">
-                <div class="is-flex is-justify-content-center">
-                    <figure class="image is-64x64">
-                        <%= image_tag avatar_select(user, [100, 100]), alt: 'Placeholder Image', class: 'is-rounded' %>
-                    </figure>
-                </div>
+                <%= link_to user do %>
+                    <div class="is-flex is-justify-content-center">
+                        <figure class="image is-64x64">
+                            <%= image_tag avatar_select(user, [100, 100]), alt: 'Placeholder Image', class: 'is-rounded' %>
+                        </figure>
+                    </div>
+                    <p><%= user.name %></p>
+                <% end %>
 
-                <p><%= user.name %></p>
                 <% friend_request = FriendRequest.locate_request(current_user.id, user.id) %>
+                
                 <% if friend_request.empty? %>
                     <%= link_to friend_requests_path(user_id: current_user.id, friend_id: user.id), method: :post, class: 'button is-small' do %>
                         <span>Add Friend</span>
