--- a/app/views/users/suggest.html.erb
+++ b/app/views/users/suggest.html.erb
@@ -3,10 +3,12 @@
     <% suggest_users.each do |user| %>
         <div class="columns mb-2">
             <figure class="image is-24x24 column is-3 is-pulled-right pt-5">
-                <%= image_tag avatar_select(user, [24,24]), alt: 'Placeholder Image', class: 'is-rounded' %>
+                <%= link_to user do %>
+                    <%= image_tag avatar_select(user, [24,24]), alt: 'Placeholder Image', class: 'is-rounded' %>
+                <% end %>
             </figure>
             <p class="column is-9">
-                <span class="is-size-7"><%= user.name %></span>
+                <span class="is-size-7"><%= link_to user.name, user %></span>
                 <%= link_to friend_requests_path(user_id: current_user.id, friend_id: user.id), method: :post, class: 'button is-small' do %>
                     <span>Add Friend</span>
                     <span class="icon">
