Implementing photo posting on post form with javascript to show image name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -137,5 +137,6 @@
         <%= render template: 'users/suggest', locals: {suggest_users: @suggest_users} %>
       </div>
     </div>
+    <%= javascript_pack_tag "index"%>
   </body>
 </html>
