--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -10,6 +10,11 @@
         <div class="column is-9">
             <p class="is-text-weight-semibold is-size-6"><%= link_to post.user.name, post.user %></p>
             <p class="is-size-6"><%= post.body %></p>
+            <div class="post-image">
+                <% if post.photo.attached? %>
+                    <%= image_tag post.photo, alt: 'Post Image', class: '' %>
+                <% end %>
+            </div>
             <div class="likes">
                 <% like = Like.locate_like(current_user.id, post.id) %>
                 <% if like.empty? %>
