--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,3 +20,11 @@
 .file-name {
     display: none;
 }
+
+.notification-body{
+    width: 50%;
+    z-index: 99;
+    left: 25%;
+    right: 25%;
+    text-align: center;
+}
