--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,63 @@
-<h2>Sign up</h2>
+<div class="columns">
+  <div class="column is-10 is-offset-1 has-text-centered">
+    <div class="box">
+      <h3 class="is-size-3">Sign up</h3>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="field">
+          <p class="control">
+            <%= f.label :email, class: "label" %>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input" %>
+          </p>
+        </div>
+
+        <div class="field">
+          <p class="control">
+            <%= f.label :password, class: "label" %>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %>
+            <%= f.password_field :password, autocomplete: "new-password", class: "input" %>
+          </p>
+        </div>
+
+        <div class="field">
+          <p class="control">
+            <%= f.label :password_confirmation, class: "label" %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input" %>
+          </p>
+        </div>
+
+        <div class="field">
+          <p class="control">
+            <%= f.label :avatar, "Profile Picture", class: "label" %>
+            <div class="is-flex is-justify-content-center">
+              <div class="file is-boxed is-light mt-2">
+                <label class="file-label">
+                    <%= f.file_field :avatar, accept: 'image/png,image/jpeg', class: 'file-input' %>
+                    <span class="file-cta">
+                        <span class="file-icon">
+                            <%= icon('fas', 'upload') %>
+                        </span>
+                        <span class="file-label">
+                            Upload an Image…
+                        </span>
+                    </span>
+                    <span class="file-name"></span>
+                </label>
+              </div>
+            </div>
+          </p>
+        </div>
+        <br />
+        <div class="actions">
+          <%= f.submit "Sign up", class: "button is-info" %>
+        </div>
+      <% end %>
+      <br />
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
