--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -70,5 +70,11 @@
                 </div>
             <% end %>
         </div>
+
+        <div id="delete-account">
+            <h4 class="is-size-4">Cancel my account</h4>
+
+            <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "button is-danger" %></p>
+        </div>
     </div>
 </div>
