--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,8 +8,15 @@
 
         <div class="field">
           <p class="control">
+            <%= f.label :name, class: "label" %>
+            <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "input" %>
+          </p>
+        </div>
+
+        <div class="field">
+          <p class="control">
             <%= f.label :email, class: "label" %>
-            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input" %>
+            <%= f.email_field :email, autocomplete: "email", class: "input" %>
           </p>
         </div>
 
