Adding user pages feature testing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -141,6 +141,7 @@
 
       <div class="column is-offset-1 is-2 ml-2">
         <% if user_signed_in? %>
+          <%= @suggest_users.size %>
           <%= render template: 'users/suggest', locals: {suggest_users: @suggest_users} %>
         <% end %>
       </div>
