--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
 
         <div class="field">
           <p class="control">
-            <%= f.label :password_confirmation, class: "label" %>
+            <%= f.label :password_confirmation, "Password Confirmation", class: "label" %>
             <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input" %>
           </p>
         </div>
@@ -42,7 +42,7 @@
             <%= f.label :avatar, "Profile Picture", class: "label" %>
             <div class="is-flex is-justify-content-center">
               <div class="file is-boxed is-light mt-2">
-                <label class="file-label">
+                <label>
                     <%= f.file_field :avatar, accept: 'image/png,image/jpeg', class: 'file-input' %>
                     <span class="file-cta">
                         <span class="file-icon">
