Adding friend requests feature testing

--- a/app/views/friend_requests/index.html.erb
+++ b/app/views/friend_requests/index.html.erb
@@ -9,7 +9,7 @@
             <% end %>
         </div>
     </div>
-    <div class="hero is-halfheight" id="pending-request">
+    <div class="hero is-halfheight" id="pending-requests">
         <div>
             <h3 class="is-size-3 mb-5">Pending Requests</h3>
             <% if @pending.empty? %>
