Adding testing for posts

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: post do |f| %>
-    <div class="post columns box m-2">
+    <div class="post columns box m-2" id="post-form">
         <div class="column is-2">
             <figure class="image is-pulled-right">
                 <%= link_to current_user do %>
