--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<article class="post box m-2">
+<article class="post box m-2" id="post-<%= post.id %>">
     <div class="columns">
         <div class="column is-2">
             <figure class="image is-48x48 is-pulled-right">
