--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -10,7 +10,7 @@
         <div class="column is-10">
             <div class="field is-horizontal columns">
                 <div class="control column is-9">
-                    <%= f.text_field :body, placeholder: "Write a comment...", class: 'input is-small' %>
+                    <%= f.text_field :body, placeholder: "Write a comment...", class: 'input is-small comment-form' %>
                 </div>
                 <div class="ml-1 column is-2">
                     <%= f.submit message, class: 'button is-link is-small' %>
