--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -12,7 +12,7 @@
     </div>
     <% if current_user.id == comment.user_id %>
         <div class="column is-1">
-            <%= link_to post_comment_path(post_id: comment.post.id, comment: comment), method: :delete, title: 'Delete Comment' do %>
+            <%= link_to post_comment_path({post_id: comment.post.id, id: comment}), method: :delete, title: 'Delete Comment' do %>
                 <span class="icon">
                     <%= icon('fas', 'trash') %>
                 </span>
