--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,26 @@
         </figure>
     </div>
     <div class="column is-5">
-        <h3 class="is-size-3"><%= @user.name%></h3>
+        <h3 class="is-size-3"><%= @user.name %></h3>
+
+        <% unless User.is_friend?(current_user, @user) %>
+            <% friend_request = FriendRequest.locate_request(current_user.id, @user.id) %>
+            <% if friend_request.empty? %>
+                <%= link_to friend_requests_path(user_id: current_user.id, friend_id: @user.id), method: :post, class: 'button is-small' do %>
+                    <span>Add Friend</span>
+                    <span class="icon">
+                        <%= icon('fas', 'user-plus') %>
+                    </span>
+                <% end %>
+            <% else %>
+                <%= link_to friend_request_path(friend_request[0].id), method: :delete, class: 'button is-small' do %>
+                    <span>Delete Request</span>
+                    <span class="icon">
+                        <%= icon('fas', 'user-minus') %>
+                    </span>
+                <% end %>
+            <% end %>
+        <% end %>
         <div class="user-info mt-3">
             <span class="icon-text">
                 <span class="icon">
