--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,7 +2,11 @@
     <div class="column is-2 is-align-self-center">
         <figure class="image is-24x24 is-pulled-right">
             <%= link_to comment.user do %>
-                <%= image_tag avatar_select(comment.user, [50,50]), alt: 'Placeholder Image', class: 'is-rounded' %>
+                <% if comment.user.avatar.attached? %>
+                    <%= cl_image_tag comment.user.avatar.key, :width => 50, :crop => "fill", alt: 'Placeholder Image', class: 'is-rounded' %>
+                <% else %>
+                    <%= image_tag "https://bulma.io/images/placeholders/128x128.png", alt: 'Placeholder Image', class: 'is-rounded' %>
+                <% end %>
             <% end %>
         </figure>
     </div>
