--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,7 +3,11 @@
         <div class="column is-2">
             <figure class="image is-pulled-right">
                 <%= link_to current_user do %>
-                    <%= image_tag avatar_select(current_user, [48,48]), alt: 'Placeholder Image', class: 'is-rounded' %>
+                    <% if current_user.avatar.attached? %>
+                        <%= cl_image_tag current_user.avatar.key, :width => 48, :crop => "fill", alt: 'Placeholder Image', class: 'is-rounded' %>
+                    <% else %>
+                        <%= image_tag "https://bulma.io/images/placeholders/128x128.png", alt: 'Placeholder Image', class: 'is-rounded' %>
+                    <% end %>
                 <% end %>
             </figure>
         </div>
