--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,11 @@
     <div class="column is-4">
         <%= form_with model: @user do |image| %>
             <figure class="image is-square">
-                <%= image_tag avatar_select(current_user, [500, 500]), alt: 'Placeholder Image', class: 'is-rounded' %>
+                <% if current_user.avatar.attached? %>
+                    <%= cl_image_tag current_user.avatar.key, :width => 500, :crop => "fill", alt: 'Placeholder Image', class: 'is-rounded' %>
+                <% else %>
+                    <%= image_tag "https://bulma.io/images/placeholders/128x128.png", alt: 'Placeholder Image', class: 'is-rounded' %>
+                <% end %>
             </figure>
             
             <div class="is-flex is-justify-content-center">
