--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,11 @@
 <div class="columns mt-6" id="user-profile">
     <div class="column is-3 is-offset-1">
         <figure class="image is-square">
-            <%= image_tag avatar_select(@user, [250,250]), alt: 'Placeholder Image', class: 'is-rounded' %>
+            <% if @user.avatar.attached? %>
+                <%= cl_image_tag @user.avatar.key, :width => 250, :crop => "fill", alt: 'Placeholder Image', class: 'is-rounded' %>
+            <% else %>
+                <%= image_tag "https://bulma.io/images/placeholders/128x128.png", alt: 'Placeholder Image', class: 'is-rounded' %>
+            <% end %>
         </figure>
     </div>
     <div class="column is-5">
