--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,7 +3,7 @@
         <figure class="image is-24x24 is-pulled-right">
             <%= link_to comment.user do %>
                 <% if comment.user.avatar.attached? %>
-                    <%= cl_image_tag comment.user.avatar.key, :width => 50, :crop => "fill", alt: 'Placeholder Image', class: 'is-rounded' %>
+                    <%= cl_image_tag comment.user.avatar.key, ::width => 48, :height => 48, :crop => "fill", alt: 'Placeholder Image', class: 'is-rounded' %>
                 <% else %>
                     <%= image_tag "https://bulma.io/images/placeholders/128x128.png", alt: 'Placeholder Image', class: 'is-rounded' %>
                 <% end %>
