--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,7 +4,7 @@
             <figure class="image is-pulled-right">
                 <%= link_to current_user do %>
                     <% if current_user.avatar.attached? %>
-                        <%= cl_image_tag current_user.avatar.key, :width => 48, :crop => "fill", alt: 'Placeholder Image', class: 'is-rounded' %>
+                        <%= cl_image_tag current_user.avatar.key, :width => 48, :height => 48, :crop => "fill", alt: 'Placeholder Image', class: 'is-rounded' %>
                     <% else %>
                         <%= image_tag "https://bulma.io/images/placeholders/128x128.png", alt: 'Placeholder Image', class: 'is-rounded' %>
                     <% end %>
