--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -4,7 +4,7 @@
             <figure class="image is-48x48 is-pulled-right">
                 <%= link_to post.user do %>
                     <% if post.user.avatar.attached? %>
-                        <%= cl_image_tag post.user.avatar.key, :width => 48, :crop => "fill", alt: 'Placeholder Image', class: 'is-rounded' %>
+                        <%= cl_image_tag post.user.avatar.key, :width => 48, :height => 48, :crop => "fill", alt: 'Placeholder Image', class: 'is-rounded' %>
                     <% else %>
                         <%= image_tag "https://bulma.io/images/placeholders/128x128.png", alt: 'Placeholder Image', class: 'is-rounded' %>
                     <% end %>
@@ -16,7 +16,7 @@
             <p class="is-size-6"><%= post.body %></p>
             <div class="post-image">
                 <% if post.photo.attached? %>
-                    <%= image_tag post.photo, alt: 'Post Image', class: '' %>
+                    <%= cl_image_tag post.photo.key, :width => 500, :resize => "fit", alt: 'Post Image' %>
                 <% end %>
             </div>
             <% if @post_friend %>
