--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
                     <div class="is-flex is-justify-content-center">
                         <figure class="image is-64x64">
                             <% if user.avatar.attached? %>
-                                <%= cl_image_tag user.avatar.key, :width => 48, :crop => "fill", alt: 'Placeholder Image', class: 'is-rounded' %>
+                                <%= cl_image_tag user.avatar.key, :width => 48, :height => 48, :crop => "fill", alt: 'Placeholder Image', class: 'is-rounded' %>
                             <% else %>
                                 <%= image_tag "https://bulma.io/images/placeholders/128x128.png", alt: 'Placeholder Image', class: 'is-rounded' %>
                             <% end %>
